--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Grayjay Troubleshooting and Feature Requests
+  - name: Need a Grayjay License? Need to recover your License?
     url: https://chat.futo.org/#narrow/stream/46-Grayjay
     about: For issues and feature requests related to a lost license, inability to purchase a license through FUTO Pay, please submit a support request in the Official FUTO Grayjay Zulip Channel
   - name: Offical Plugin Feedback and Questions
