--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Need a Grayjay License? Need to recover your License?
-    url: https://chat.futo.org/#narrow/stream/46-Grayjay
-    about: For issues and feature requests related to a lost license, inability to purchase a license through FUTO Pay, please submit a support request in the Official FUTO Grayjay Zulip Channel
-  - name: Offical Plugin Feedback and Questions
-    url: https://github.com/futo-org/grayjay-plugin-youtube/issues
-    about: Each plugin (e.g. YouTube, PeerTube, Twitch etc.) has their own repository, any provider related issues or questions should be directed to the appropriate issue tracker linked from the application.
+  - name: Need a Grayjay License?
+    url: https://pay.futo.org/api/PaymentPortal
+    about: Purchase a Grayjay license with Futo Pays
   - name: Plugin Building, Usage, or other Questions
     url: https://chat.futo.org/#narrow/stream/46-Grayjay
-    about: Please ask and answer plugin development related questions through [Grayjay's Community Chat](https://chat.futo.org/#narrow/stream/46-Grayjay).
+    about: Grayjays Community Chat
